--- a/index.html
+++ b/index.html
@@ -1145,8 +1145,8 @@ function popupOnClick(e) {
       let ch = 10;
       let w = ~~(iw/cw);
       let h = ~~(ih/ch);
-      let x = ~~(iw/cw * ~~(i%cw));
-      let y = ~~(ih/ch * ~~(i/cw));
+      let x = Math.round(iw * Math.round(i%cw) / cw);
+      let y = Math.round(ih * Math.round(i/cw) / ch);
       content += `<hr/><div style="width:${w}px;height:${h}px;background-image: url(images/photos/${image}.jpg);background-position: -${x}px -${y}px"></div>`;
     }
   }
