--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ let copyLink = e=>{ copyToClipboard(e.target.href); return false; };
 
 // F43BD864B6C0B41E02_2064782316, MI_pos_photos_01_b_01, "image_index": 110, (2nd sheet), 12,
 function renderPhoto(o) {
-  if (!o.material || !o.image_index) {};
+  if (!o.material) {};
 
   let lookup = {
     'MI_pos_photos_01_a_01': 1,
