--- a/index.html
+++ b/index.html
@@ -1447,7 +1447,7 @@ function addMarker(feature) {
   if (o.clue) icon = 'stash';
   if (icon=='stash') group = 'stashes';
 
-  if (isLocked(o)) icon='circle-dot';
+  if (isLocked(o)) icon='lock';
   
   if (icon=='question' && isNPC(o)) icon='soldier';
 
