--- a/index.html
+++ b/index.html
@@ -982,9 +982,9 @@ function renderItem(feature, extended=false, verbose=false) {
 
   // add PDA description
   if (o.proto && o.proto.startsWith('QuestItem_Note') ) {
-    let desc = lang[`sid_questItemprototypes_${o.name}_description`];
-    if (desc) {
-      info.note = desc;
+    let note = lang[`sid_questItemprototypes_${o.name}_description`];
+    if (note && note != desc) {
+      info.note = note;
     }
   }
 
@@ -1315,7 +1315,7 @@ function showTooltip(e) {
     content += `<hr/><div class="overflow-container small">${info.quest}</div>`;
   }
 
-  if (info.note && info.note != info.description) {
+  if (info.note) {
     content += `<hr/>${info.note}`;
   }
 
