--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <span class="search-icon search-cancel" title="Cancel">&times;</span>
   </div>
 
-  <ul id="dropdown"></ul>
+  <div class="dropdown-container scrollbar"><ul id="dropdown"></ul></div>
 
 </div>
 
@@ -1968,6 +1968,7 @@ window.onload = function(event) {
 
   const input = document.querySelector(".search-box input");
   const dropdown = document.querySelector("#dropdown");
+  const dropdownContainer = document.querySelector(".dropdown-container");
 
   function deleteFromHistory(text) {
     if (text && settings.history.includes(text)) {
@@ -1981,7 +1982,7 @@ window.onload = function(event) {
     let s = text.slice(0,100);
     if (s && !settings.history.includes(s)) {
       settings.history.unshift(s);
-      settings.history = settings.history.slice(0, 10);
+      settings.history = settings.history.slice(0, 50);
       saveSettings();
       updateDropdown();
     }
@@ -1997,10 +1998,10 @@ window.onload = function(event) {
       span.textContent = item;
 
       li.onclick = () => {
+        dropdownContainer.style.display = "none";
         input.value = item;
-        dropdown.style.display = "none";
         settings.searchText = item;
-        setTimeout(function(){updateSearch(settings.searchText)}, 250);
+        setTimeout(function(){updateSearch(settings.searchText)}, 250); 
       };
 
       li.appendChild(span);
@@ -2018,7 +2019,7 @@ window.onload = function(event) {
       dropdown.appendChild(li);
     });
 
-    dropdown.style.display = results.length ? "block" : "none";
+    dropdownContainer.style.display = results.length ? "block" : "none";
   }
 
   input.addEventListener("focus", () => updateDropdown(input.value));
@@ -2027,7 +2028,7 @@ window.onload = function(event) {
 
   document.addEventListener("click", (e) => {
     if (!dropdown.contains(e.target) && e.target !== input) {
-      dropdown.style.display = "none";
+      dropdownContainer.style.display = "none";
     }
   });
 
